Add gameover and start game form center

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>EmojiSnake</title>
 </head>
 <body>
-	
+	<span id="gameover" style="margin:auto; font-size: 30; color: red; display:none; text-align:center; position:absolute">GameOver😥 refresh to play again</span>
 </body>
 <script type="text/javascript" src="main.js"></script>
 </html>
